@@ -198,6 +198,7 @@ executable('cm4all-workshop',
   'src/main.cxx',
   'src/Config.cxx',
   'src/CommandLine.cxx',
+  'src/CgroupAccounting.cxx',
   'src/AllocatorPtr.cxx',
   'src/SyslogClient.cxx',
   'src/CaptureBuffer.cxx',
